small customisation on header

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="hero-content-wrapper">
                 <h4 class="wow fadeInUp" data-wow-delay=".2s">Thank You For Trusting</h4>
                 <h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">JEFF MUTURI DEVS</h2>
-                <p class="mb-50 wow fadeInUp" data-wow-delay=".6s">Please, purchase full version of the template to get all sections, features and permission to remove footer credit</p>
+                <p class="mb-50 wow fadeInUp" data-wow-delay=".6s">We are delighted to make you your dream website</p>
                 <div class="buttons">
                   <a href="https://rebrand.ly/flat-ud/" rel="nofollow" target="blank" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".7s">Purchase Now</a>
                 </div>
